PRAC[1] - migrate from maven to gradle